--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -295,7 +295,7 @@ loglik <- function(params) {
 
 # Test function
 theta <- c(spring_comp = 0.1, summer_comp = 0.1, autumn_comp = 0.1, winter_comp = 0.1, pi = 1, mu = 0.2)
-
+# theta <- c(spring_comp = 1e-05, summer_comp = 0.02002, autumn_comp = 3e-05, winter_comp = 4e-05, pi = 0.9, mu = 1/59.50121)
 loglik(theta)
 
 # FITTING -------------------------------------------
