--- a/Extended model/mcstate to monty.Rmd
+++ b/Extended model/mcstate to monty.Rmd
@@ -88,7 +88,60 @@ head(incidence_data)
 
 
 ```{r}
+# Build a filter and test it
 filter <- dust_filter_create(msr, time_start = 0, data = incidence_data, n_particles = 1000)
-dust_likelihood_run(filter, list(prop = 0.9)) # this is clearly wrong
+dust_likelihood_run(filter, list(spring_comp = 0.003478,
+                                summer_comp = 0.00060,
+                                autumn_comp = 0.00264,
+                                winter_comp = 0.00692, 
+                                prop = 0.98),
+                    save_trajectories = T)
 ```
+
+```{r}
+# Plot the fit
+h <- dust_likelihood_last_trajectories(filter)
+matplot(incidence_data$time, t(dust_unpack_state(filter, h)$R_all), type = "l",
+        lty = 1, col = "#00000044",
+        xlab = "Age", ylab = "Proportion seroconverted")
+points(prop_seroconv ~ time, incidence_data, pch = 19, col = "red")
+```
+
+```{r}
+# Now trying to run an MCMC
+# List of inputs
+packer <- monty_packer(c("spring_comp", "summer_comp", "autumn_comp", "winter_comp", "prop"))
+
+# Likelihood
+likelihood <- dust_likelihood_monty(filter, packer)
+
+# Priors
+prior <- monty_dsl({
+  spring_comp ~ Uniform(0, 0.1)
+  summer_comp ~ Uniform(0, 0.1)
+  autumn_comp ~ Uniform(0, 0.1)
+  winter_comp ~ Uniform(0, 0.1)
+  prop ~ Uniform(0, 1)
+})
+
+# Posterior
+posterior <- likelihood + prior
+
+# Define a sampler (random walk)
+vcv <- diag(5) * 0.0004
+sampler <- monty_sampler_random_walk(vcv)
+
+# Sample
+samples <- monty_sample(posterior, sampler, 80000, 
+                        initial = c(1e-05, 0.02002, 3e-05, 4e-05, 0.5),
+                        n_chains = 2)
+
+```
+
+```{r}
+# Check mixing
+matplot(samples$density, type = "l", lty = 1,
+        xlab = "Sample", ylab = "Log posterior probability density")
+```
+
 
